src/test/deca/syntax/invalid/untermined_string.deca
// Description:
//    chaine de charactère pas finie
//
// Resultats:
//    Erreur syntaxique 
//    Ligne 8 : no viable alternative at input 'String'

String s = "Hello world;
